V0.?.? ? AP,...

* Termite [AP,GB]
  - New (optional) dependency: SWI-Prolog >= 5.6
    (auto-detected by ./configure, or use --with-swi-prolog=[yes,no])
	* When enabled, all Term I/O will be handled by libpl, bringing
	speed and stability improvements.
	* This also paves the road for PROLOG-based analyses and
	transformations to be run directly within an analyzer.
  - Replaced all of the numerical constants for type modifiers with more
    descriptive atoms.
  - Correct generation of container nodes even when the list of successors
    is empty (arity used to be broken).

* Building SATIrE without PAG [GB]
  - SATIrE can now be built without requiring PAG; use --without-pag
    configure flag. C++ source code can check for definition of the HAVE_PAG
    macro (to some true value) for conditional compilation.

* Information about interprocedural contexts [GB]
  - New data flow analysis attribute "position" can be used to get
    information about the interprocedural analysis context
  - Experimental --output-call-strings command line flag prints a
    representation of PAG's call strings
  - After context-sensitive data flow analysis, the ICFG now contains a
    collection of Context objects (Context.h) that contain call string
    information.

V0.8.5 2008-11-22 GB,AP,VP,MS

* Tested with: [MS]
  - ROSE 0.9.3a-1593
  - PAG 9.0.0.92248
  - flex 2.5.33
  - bison 2.3
  - g++ 4.2.0 (>= 4.2.0 required by ROSE with EDG binaries)
  - Boost 1_36 (>= 1_35 required by ROSE)

* Experimental points-to/alias analysis for C programs [GB]
  - specify --run-pointsto-analysis command line flag, PAG analyses then
    have access to the new Location type and associated auxiliary functions;
    see docs/satire_attributes_auxiliary_functions for details and
    examples/pointsto_live_variables for a small example
  - specify --resolve-funcptr-calls command line flag to connect
    ExternalCall nodes with all the possible target function entry nodes as